--- a/quiz.html
+++ b/quiz.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Interactive Quiz Game</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Modern Interactive Quiz</title>
 
   <!-- Link CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="quiz-container">
-    <div id="quiz"></div>
-    <button onclick="submitAnswer()">Next</button>
-    <div class="score" id="score"></div>
+
+  <div class="quiz-wrapper">
+
+    <h1 class="quiz-title">✨ Interactive Quiz Game</h1>
+
+    <div class="progress-bar">
+      <div id="progress"></div>
+    </div>
+
+    <div class="quiz-container">
+      <div id="quiz"></div>
+      <button class="next-btn" onclick="submitAnswer()">Next</button>
+      <div class="score" id="score"></div>
+    </div>
+
   </div>
 
   <!-- Link JavaScript -->
   <script src="script.js"></script>
+
 </body>
 </html>
